cctp_trader/cctp_trader.h

typedef struct TraderInfo
{
char BrokerID[11];
char UserID[16];
char InvestorID[16];
char Password[41];
char FrontID[101];
char FlowPath[101];
int AuthKind;
char AppID[33];
char AuthCode[17];
int PrivateTopicResumeType;
int PublicTopicResumeType;
}TraderInfo;
	API_EXPORT int CreateTrader(TraderInfo* trader_info, void** phandler);
	API_EXPORT int ConnectTrader(void* handler);
	API_EXPORT int DisconnectTrader(void* handler);
	API_EXPORT int DestroyTrader(void** phandler);
    API_EXPORT const char* GetTradingDay(void* trader);
    API_EXPORT int ReqUserLogout(void* trader, CThostFtdcUserLogoutField* pUserLogout, int nRequestID);
    API_EXPORT int ReqUserPasswordUpdate(void* trader, CThostFtdcUserPasswordUpdateField* pUserPasswordUpdate, int nRequestID);
    API_EXPORT int ReqTradingAccountPasswordUpdate(void* trader, CThostFtdcTradingAccountPasswordUpdateField* pTradingAccountPasswordUpdate, int nRequestID);
    API_EXPORT int ReqUserAuthMethod(void* trader, CThostFtdcReqUserAuthMethodField* pReqUserAuthMethod, int nRequestID);
    API_EXPORT int ReqGenUserCaptcha(void* trader, CThostFtdcReqGenUserCaptchaField* pReqGenUserCaptcha, int nRequestID);
    API_EXPORT int ReqGenUserText(void* trader, CThostFtdcReqGenUserTextField* pReqGenUserText, int nRequestID);
    API_EXPORT int ReqUserLoginWithCaptcha(void* trader, CThostFtdcReqUserLoginWithCaptchaField* pReqUserLoginWithCaptcha, int nRequestID);
    API_EXPORT int ReqUserLoginWithText(void* trader, CThostFtdcReqUserLoginWithTextField* pReqUserLoginWithText, int nRequestID);
    API_EXPORT int ReqUserLoginWithOTP(void* trader, CThostFtdcReqUserLoginWithOTPField* pReqUserLoginWithOTP, int nRequestID);
    API_EXPORT int ReqOrderInsert(void* trader, CThostFtdcInputOrderField* pInputOrder, int nRequestID);
    API_EXPORT int ReqParkedOrderInsert(void* trader, CThostFtdcParkedOrderField* pParkedOrder, int nRequestID);
    API_EXPORT int ReqParkedOrderAction(void* trader, CThostFtdcParkedOrderActionField* pParkedOrderAction, int nRequestID);
    API_EXPORT int ReqOrderAction(void* trader, CThostFtdcInputOrderActionField* pInputOrderAction, int nRequestID);
    API_EXPORT int ReqQueryMaxOrderVolume(void* trader, CThostFtdcQueryMaxOrderVolumeField* pQueryMaxOrderVolume, int nRequestID);
    API_EXPORT int ReqSettlementInfoConfirm(void* trader, CThostFtdcSettlementInfoConfirmField* pSettlementInfoConfirm, int nRequestID);
    API_EXPORT int ReqRemoveParkedOrder(void* trader, CThostFtdcRemoveParkedOrderField* pRemoveParkedOrder, int nRequestID);
    API_EXPORT int ReqRemoveParkedOrderAction(void* trader, CThostFtdcRemoveParkedOrderActionField* pRemoveParkedOrderAction, int nRequestID);
    API_EXPORT int ReqExecOrderInsert(void* trader, CThostFtdcInputExecOrderField* pInputExecOrder, int nRequestID);
    API_EXPORT int ReqExecOrderAction(void* trader, CThostFtdcInputExecOrderActionField* pInputExecOrderAction, int nRequestID);
    API_EXPORT int ReqForQuoteInsert(void* trader, CThostFtdcInputForQuoteField* pInputForQuote, int nRequestID);
    API_EXPORT int ReqQuoteInsert(void* trader, CThostFtdcInputQuoteField* pInputQuote, int nRequestID);
    API_EXPORT int ReqQuoteAction(void* trader, CThostFtdcInputQuoteActionField* pInputQuoteAction, int nRequestID);
    API_EXPORT int ReqBatchOrderAction(void* trader, CThostFtdcInputBatchOrderActionField* pInputBatchOrderAction, int nRequestID);
    API_EXPORT int ReqOptionSelfCloseInsert(void* trader, CThostFtdcInputOptionSelfCloseField* pInputOptionSelfClose, int nRequestID);
    API_EXPORT int ReqOptionSelfCloseAction(void* trader, CThostFtdcInputOptionSelfCloseActionField* pInputOptionSelfCloseAction, int nRequestID);
    API_EXPORT int ReqCombActionInsert(void* trader, CThostFtdcInputCombActionField* pInputCombAction, int nRequestID);
    API_EXPORT int ReqQryOrder(void* trader, CThostFtdcQryOrderField* pQryOrder, int nRequestID);
    API_EXPORT int ReqQryTrade(void* trader, CThostFtdcQryTradeField* pQryTrade, int nRequestID);
    API_EXPORT int ReqQryInvestorPosition(void* trader, CThostFtdcQryInvestorPositionField* pQryInvestorPosition, int nRequestID);
    API_EXPORT int ReqQryTradingAccount(void* trader, CThostFtdcQryTradingAccountField* pQryTradingAccount, int nRequestID);
    API_EXPORT int ReqQryInvestor(void* trader, CThostFtdcQryInvestorField* pQryInvestor, int nRequestID);
    API_EXPORT int ReqQryTradingCode(void* trader, CThostFtdcQryTradingCodeField* pQryTradingCode, int nRequestID);
    API_EXPORT int ReqQryInstrumentMarginRate(void* trader, CThostFtdcQryInstrumentMarginRateField* pQryInstrumentMarginRate, int nRequestID);