CSharpCtp/TraderDllWrapper.cs

using System;
using System.Runtime.InteropServices;


namespace CSharpCtp.Trader
{
    public class TraderDllWrapper
	{
		[DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "CreateTrader",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void CreateTrader(ref TraderInfo traderInfo, out IntPtr phandler);        

        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "DestroyTrader",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern void DestroyTrader(out IntPtr phandler);

		[DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ConnectTrader",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ConnectTrader(IntPtr phandler);

        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "DisconnectTrader",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int DisconnectTrader(IntPtr phandler);

        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "GetTradingDay",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern String GetTradingDay(IntPtr phandler);

        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqUserLogin",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqUserLogin(IntPtr phandler, ref CThostFtdcReqUserLoginField pReqUserLoginField, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqUserLogout",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqUserLogout(IntPtr phandler, ref CThostFtdcUserLogoutField pUserLogout, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqUserPasswordUpdate",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqUserPasswordUpdate(IntPtr phandler, ref CThostFtdcUserPasswordUpdateField pUserPasswordUpdate, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqTradingAccountPasswordUpdate",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqTradingAccountPasswordUpdate(IntPtr phandler, ref CThostFtdcTradingAccountPasswordUpdateField pTradingAccountPasswordUpdate, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqUserAuthMethod",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqUserAuthMethod(IntPtr phandler, ref CThostFtdcReqUserAuthMethodField pReqUserAuthMethod, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqGenUserCaptcha",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqGenUserCaptcha(IntPtr phandler, ref CThostFtdcReqGenUserCaptchaField pReqGenUserCaptcha, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqGenUserText",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqGenUserText(IntPtr phandler, ref CThostFtdcReqGenUserTextField pReqGenUserText, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqUserLoginWithCaptcha",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqUserLoginWithCaptcha(IntPtr phandler, ref CThostFtdcReqUserLoginWithCaptchaField pReqUserLoginWithCaptcha, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqUserLoginWithText",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqUserLoginWithText(IntPtr phandler, ref CThostFtdcReqUserLoginWithTextField pReqUserLoginWithText, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqUserLoginWithOTP",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqUserLoginWithOTP(IntPtr phandler, ref CThostFtdcReqUserLoginWithOTPField pReqUserLoginWithOTP, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqOrderInsert",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqOrderInsert(IntPtr phandler, ref CThostFtdcInputOrderField pInputOrder, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqParkedOrderInsert",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqParkedOrderInsert(IntPtr phandler, ref CThostFtdcParkedOrderField pParkedOrder, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqParkedOrderAction",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqParkedOrderAction(IntPtr phandler, ref CThostFtdcParkedOrderActionField pParkedOrderAction, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqOrderAction",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqOrderAction(IntPtr phandler, ref CThostFtdcInputOrderActionField pInputOrderAction, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqQueryMaxOrderVolume",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqQueryMaxOrderVolume(IntPtr phandler, ref CThostFtdcQueryMaxOrderVolumeField pQueryMaxOrderVolume, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqSettlementInfoConfirm",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqSettlementInfoConfirm(IntPtr phandler, ref CThostFtdcSettlementInfoConfirmField pSettlementInfoConfirm, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqRemoveParkedOrder",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqRemoveParkedOrder(IntPtr phandler, ref CThostFtdcRemoveParkedOrderField pRemoveParkedOrder, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqRemoveParkedOrderAction",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqRemoveParkedOrderAction(IntPtr phandler, ref CThostFtdcRemoveParkedOrderActionField pRemoveParkedOrderAction, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqExecOrderInsert",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqExecOrderInsert(IntPtr phandler, ref CThostFtdcInputExecOrderField pInputExecOrder, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqExecOrderAction",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqExecOrderAction(IntPtr phandler, ref CThostFtdcInputExecOrderActionField pInputExecOrderAction, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqForQuoteInsert",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqForQuoteInsert(IntPtr phandler, ref CThostFtdcInputForQuoteField pInputForQuote, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqQuoteInsert",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqQuoteInsert(IntPtr phandler, ref CThostFtdcInputQuoteField pInputQuote, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqQuoteAction",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqQuoteAction(IntPtr phandler, ref CThostFtdcInputQuoteActionField pInputQuoteAction, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqBatchOrderAction",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqBatchOrderAction(IntPtr phandler, ref CThostFtdcInputBatchOrderActionField pInputBatchOrderAction, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqOptionSelfCloseInsert",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqOptionSelfCloseInsert(IntPtr phandler, ref CThostFtdcInputOptionSelfCloseField pInputOptionSelfClose, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqOptionSelfCloseAction",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqOptionSelfCloseAction(IntPtr phandler, ref CThostFtdcInputOptionSelfCloseActionField pInputOptionSelfCloseAction, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqCombActionInsert",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqCombActionInsert(IntPtr phandler, ref CThostFtdcInputCombActionField pInputCombAction, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqQryOrder",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqQryOrder(IntPtr phandler, ref CThostFtdcQryOrderField pQryOrder, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqQryTrade",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqQryTrade(IntPtr phandler, ref CThostFtdcQryTradeField pQryTrade, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqQryInvestorPosition",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqQryInvestorPosition(IntPtr phandler, ref CThostFtdcQryInvestorPositionField pQryInvestorPosition, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqQryTradingAccount",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqQryTradingAccount(IntPtr phandler, ref CThostFtdcQryTradingAccountField pQryTradingAccount, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqQryInvestor",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqQryInvestor(IntPtr phandler, ref CThostFtdcQryInvestorField pQryInvestor, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqQryTradingCode",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqQryTradingCode(IntPtr phandler, ref CThostFtdcQryTradingCodeField pQryTradingCode, int nRequestID);
        
        [DllImport("cctp_trader.dll", CharSet = CharSet.Auto, EntryPoint = "ReqQryInstrumentMarginRate",
            CallingConvention = CallingConvention.Cdecl)]
        public static extern int ReqQryInstrumentMarginRate(IntPtr phandler, ref CThostFtdcQryInstrumentMarginRateField pQryInstrumentMarginRate, int nRequestID);
